--- a/index.html
+++ b/index.html
@@ -34,17 +34,19 @@
             <div class="box">
                 <img src="/img/1.png" alt="">
                 <h2 class="h-secondary">Learn C++</h2>
-                <p class="text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam, voluptate reiciendis ab, iure laborum ea officia incidunt placeat nulla esse laboriosam voluptatibus necessitatibus autem dolore pariatur rem illo est ducimus.</p>
+                <p class="text">C++ is an object-oriented programming language which gives a clear structure to programs and allows code to be reused, lowering development costs. C++ is portable and can be used to develop applications that can be adapted to multiple platforms. C++ is fun and easy to learn!</p>
             </div>
             <div class="box">
                 <img src="/img/1.png" alt="">
                 <h2 class="h-secondary">Learn Java</h2>
-                <p class="text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam, voluptate reiciendis ab, iure laborum ea officia incidunt placeat nulla esse laboriosam voluptatibus necessitatibus autem dolore pariatur rem illo est ducimus.</p>
+                <p class="text">Java is a programming language and computing platform first released by Sun Microsystems in 1995. It has evolved from humble beginnings to power a large share of today’s digital world, by providing the reliable platform upon which many services and applications are built. New, innovative products and digital services designed for the future continue to rely on Java, as well.
+
+.</p>
             </div>
             <div class="box">
                 <img src="/img/1.png" alt="">
                 <h2 class="h-secondary">Learn Python</h2>
-                <p class="text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam, voluptate reiciendis ab, iure laborum ea officia incidunt placeat nulla esse laboriosam voluptatibus necessitatibus autem dolore pariatur rem illo est ducimus.</p>
+                <p class="text">Python is an interpreted, object-oriented, high-level programming language with dynamic semantics. Its high-level built in data structures, combined with dynamic typing and dynamic binding, make it very attractive for Rapid Application Development, as well as for use as a scripting or glue language to connect existing components together. Python's simple, easy to learn syntax emphasizes readability and therefore reduces the cost of program maintenance. </p>
             </div>
         </div>
     </section>
